# OpenSTM

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  vcpkg.json
Boards/: CMakeLists.txt
Boards/Nucleo-F072-Discovery/: App.cpp  App.h
Boards/Nucleo64-F303RE/: App.cpp  App.h
HAL/: App.cpp  App.h  App.hpp  CMakeLists.txt  Driver.hpp
HAL/IO/Digital/: DigitalIn.hpp  DigitalOut.hpp  DigitalState.h  IDigitalIO.h  IDigitalIn.h  IDigitalOut.h  PinID.h
HAL/Serial/: IUSART.h  USART.hpp  USART_Base.cpp  USART_Base.h
HAL/Test/: CMakeLists.txt  DigitalInTests.cpp  DigitalOutTests.cpp  SystemTimerTests.cpp  USARTTests.cpp
HAL/Timer/: ISystemTimer.h  SystemTimer.hpp
Lib/: CMakeLists.txt
Lib/Allocator/: StaticStackAllocator.hpp
Lib/Container/: RingBuffer.hpp
Lib/Event/: Event.hpp
Lib/Math/: StmMath.cpp  StmMath.h
Lib/Test/: CMakeLists.txt  EventTests.cpp  MathTests.cpp  RingBufferTests.cpp  StaticStackAllocatorTests.cpp
STM32/: CMakeLists.txt
STM32/F072DISCO/: .mxproject  CMakeLists.txt  F072-DISCO.ioc  STM32F072XX_FLASH.ld
STM32/F072DISCO/Core/Inc/: main.h  stm32f0xx_it.h
STM32/F072DISCO/Core/Src/: main.c  stm32f0xx_it.c
STM32/F072DISCO/cmake/: gcc-arm-none-eabi.cmake
STM32/F072DISCO/cmake/stm32cubemx/: CMakeLists.txt
STM32/F303RE/: .mxproject  CMakeLists.txt  CMakePresets.json  F303RE.ioc  Makefile  STM32F303XX_FLASH.ld  stm32f303retx_flash.ld
STM32/F303RE/Core/Inc/: main.h  stm32f3xx_it.h
STM32/F303RE/Core/Src/: main.c  stm32f3xx_it.c  usart.c
STM32/F303RE/Inc/: main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h  usbd_conf.h  usbd_custom_hid_if.h
STM32/F303RE/Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Inc/: usbd_customhid.h
STM32/F303RE/Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Src/: usbd_customhid.c
STM32/F303RE/Middlewares/ST/STM32_USB_Device_Library/Core/Inc/: usbd_conf_template.h  usbd_desc_template.h
STM32/F303RE/Src/: gpio.c  main.c  stm32f3xx_it.c  usb_device.c  usbd_conf.c  usbd_custom_hid_if.c  usbd_desc.c
STM32/F303RE/cmake/: gcc-arm-none-eabi.cmake
STM32/F303RE/cmake/stm32cubemx/: CMakeLists.txt
STM32/F334R8/: .mxproject  CMakeLists.txt  F334R8.ioc  stm32f334r8tx_flash.ld
STM32/F334R8/Inc/: main.h  stm32f3xx_it.h
STM32/F334R8/Src/: main.c  stm32f3xx_it.c  usart.c
STM32/F334R8/cmake/: gcc-arm-none-eabi.cmake
STM32/F334R8/cmake/stm32cubemx/: CMakeLists.txt
STM32/F411RE/: .mxproject  CMakeLists.txt  F411RE.ioc
STM32/F411RE/Inc/: stm32f4xx_it.h
STM32/F411RE/Src/: gpio.c  main.c  stm32f4xx_it.c
STM32/F411RE/cmake/: gcc-arm-none-eabi.cmake
STM32/F411RE/cmake/stm32cubemx/: CMakeLists.txt
STM32/F446RE/: .mxproject  CMakeLists.txt  F446RE.ioc
STM32/F446RE/Inc/: main.h
STM32/F446RE/Src/: main.c  usart.c
STM32/F446RE/cmake/: gcc-arm-none-eabi.cmake
STM32/F446RE/cmake/stm32cubemx/: CMakeLists.txt
STM32/G474RE/: .mxproject  CMakeLists.txt  G474RE.ioc  stm32g474retx_flash.ld
STM32/G474RE/Inc/: main.h
STM32/G474RE/Src/: main.c
STM32/G474RE/cmake/: gcc-arm-none-eabi.cmake
STM32/G474RE/cmake/stm32cubemx/: CMakeLists.txt
